syntax = "proto3";

package ua.pomo.catalog.api;

import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "image_list.proto";
import "google/protobuf/wrappers.proto";

message Fabric {
  string id = 1;
  string display_name = 2;
  Image image = 3;
}

message Price {
  int32 price = 1;
  google.protobuf.Int32Value promo = 2;
}

message Product {
  option (google.api.resource) = {
    type: "api.pomo.ua/Product"
    pattern: "categories/{category}/models/{model}/products/{product}"
  };
  string name = 1;
  string uuid = 2;
  string model_id = 3;
  string display_name = 4;
  Price price = 5;
  ImageList image_list = 6;
  Fabric fabric = 7;
  string size = 8;
}

message ListProductsRequest {
  // The parent resource name, for example, "categories/category1/model/modelId"
  string parent = 1 [(google.api.resource_reference) = {
    type: "api.pomo.ua/Model"
  }];

  // The maximum number of items to return.
  int32 page_size = 2;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 3;
}

message ListProductsResponse {
  //There will be a maximum number of items returned based on the page_size field
  // in the request.
  repeated Product products = 1;

  // Token to retrieve the next page of results, or empty if there are no
  // more results in the list.
  string next_page_token = 2;
}


message GetProductRequest {
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "api.pomo.ua/Product"
    }];
}

